--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
       hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_query_cache: false
       hibernate.generate_statistics: false
-  liquibase:
-    change-log: classpath:/db/master.xml
+#  liquibase:
+#    change-log: classpath:/db/master.xml
 #        drop-first: true
 server:
   port: 8080
