--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -17,6 +17,13 @@
 		<java.version>17</java.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>AsposeJavaAPI</id>
+			<name>Aspose Java API</name>
+			<url>https://repository.aspose.com/repo/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -81,6 +88,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aspose</groupId>
+			<artifactId>aspose-barcode</artifactId>
+			<version>20.3</version>
+			<classifier>jdk17</classifier>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
