--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -95,6 +95,13 @@
 			<classifier>jdk17</classifier>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
+		<dependency>
+			<groupId>jakarta.json</groupId>
+			<artifactId>jakarta.json-api</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
 
 	</dependencies>
 
