--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -15,7 +15,7 @@
 	<description>Sistema Gerenciador de Alocação</description>
 	<properties>
 		<java.version>17</java.version>
-		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<mapstruct.version>1.4.1.Final</mapstruct.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -88,18 +88,33 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.3</version>
 		</dependency>
-		<dependency>
-			<groupId>com.aspose</groupId>
-			<artifactId>aspose-barcode</artifactId>
-			<version>20.3</version>
-			<classifier>jdk17</classifier>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
 		<dependency>
 			<groupId>jakarta.json</groupId>
 			<artifactId>jakarta.json-api</artifactId>
 			<version>2.1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
 		</dependency>
 
 
@@ -127,6 +142,7 @@
 				<configuration>
 					<source>9</source>
 					<target>9</target>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -136,7 +152,7 @@
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.5.5.Final</version>
+							<version>${mapstruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
