--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -116,6 +116,11 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>parsson</artifactId>
+			<version>1.1.6</version>
+		</dependency>
 
 
 	</dependencies>
