--- a/sga-frontend/package.json
+++ b/sga-frontend/package.json
@@ -27,6 +27,8 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.1",
         "ng-block-ui": "^4.0.1",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
